# timezone-converter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE.md  aliases.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  timezone_converter.py  timezones.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  deployment.yml  integration.yml  release.yml
scripts/: generate_assets.py
tests/: comparison_view_test.py  helper_test.py  list_view_test.py  main_test.py  search_view_test.py
timezone_converter/: __init__.py  classes.py  comparison_view.py  constants.py  helper.py  list_view.py  main.py  search_view.py
