[build-system]
requires = [
    "hatchling>=1.10.0",
]
build-backend = "hatchling.build"

[project]
name = "timezone-converter"
version = "0.12.1"
description = "Compare your local timezone with foreign ones."
license = "MIT"
license-files = { paths = ["LICENSE"] }
readme = "README.md"
authors = [
    { name = "Iago Alonso", email = "deejaynof@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = [
    "importlib-metadata; python_version < '3.8'",
    "pytz>=2022.6",
    "rich>=12.6.0",
]

[project.scripts]
timezone-converter = "timezone_converter.main:main"

[project.urls]
Homepage = "https://github.com/ibLeDy/timezone-converter"

[tool.hatch.build.targets.sdist]
include = [
    "timezone_converter",
]
exclude = [
    "tests*",
]

[tool.hatch.build.targets.wheel]
packages = [
    "timezone_converter",
]

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
plugins = "covdefaults"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
commands =
    timezone-converter
    timezone-converter --help
    timezone-converter tijuana
    timezone-converter tijuana --single
    timezone-converter tijuana --single 14
    timezone-converter tijuana new_york
    timezone-converter tijuana new_york --single
    timezone-converter tijuana --zone
    timezone-converter tijuana --list
    timezone-converter tijuana --list tbd
"""
