[metadata]
name = timezone_converter
version = 0.4.3
description = Compare your local timezone with a foreign one.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ibLeDy/timezone-converter
author = Iago Alonso
author_email = deejaynof@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Terminals
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
install_requires =
    pytz>=2021.1
    rich>=9.9.0
    importlib-metadata;python_version<"3.8"
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    timezone-converter = timezone_converter.main:main

[options.packages.find]
exclude =
    tests*

[coverage:run]
plugins = covdefaults

[tox:tox]
envlist = py36, py37, py38, py39

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
commands =
    timezone-converter
    timezone-converter --help
    timezone-converter tijuana
    timezone-converter tijuana --zone
    timezone-converter tijuana --list

[mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true

[mypy-tests.*]
disallow_untyped_defs = false
